added the baseline model

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "source": [
     "This binary classification problem is to predict whether the customer will pay the credit or not.\n",
-    "There is a baseline provided in the notebook. The dataset is taken from Open Machine Learning Course https://mlcourse.ai. The goal of this assignment is to test model building and evaluation skills. \n",
+    "There is a baseline provided in the notebook. The dataset is taken from Open Machine Learning Course https://mlcourse.ai. The goal of this assignment is to test model building and evaluation skills. Feel free to improve the baseline model using different techinques. \n",
     "\n",
     "The expected time for this assignment is no more than 2 hours. Please send us your notebook with the solution."
    ]
