removed some parts of the notebook and edited the explanations a little bit

--- a/Assignment.ipynb
+++ b/Assignment.ipynb
@@ -1,8 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DH Logistics Data Science - Interview Assignment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This assignment contains a binary classification problem to predict whether the customer will pay back a loan he took out.\n",
+    "The dataset is taken from Open Machine Learning Course https://mlcourse.ai. The goal of this assignment is to test your model building and model evaluation skillset.\n",
+    "\n",
+    "The expected time for this assignment is no more than 1 hour. Please send us your notebook with the solution 1 hour after receiving the assignment."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T09:26:32.042693Z",
@@ -19,22 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This binary classification problem is to predict whether the customer will pay the credit or not.\n",
-    "There is a baseline provided in the notebook. The dataset is taken from Open Machine Learning Course https://mlcourse.ai. The goal of this assignment is to test model building and evaluation skills. Feel free to improve the baseline model. \n",
-    "\n",
-    "The expected time for this assignment is no more than 2 hours. Please send us your notebook with the solution."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Baseline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T09:30:35.594865Z",
@@ -72,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T09:16:38.779730Z",
@@ -89,140 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T09:15:40.441647Z",
      "start_time": "2019-06-14T09:15:40.431393Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SeriousDlqin2yrs</th>\n",
-       "      <th>age</th>\n",
-       "      <th>NumberOfTime30-59DaysPastDueNotWorse</th>\n",
-       "      <th>DebtRatio</th>\n",
-       "      <th>NumberOfTimes90DaysLate</th>\n",
-       "      <th>NumberOfTime60-89DaysPastDueNotWorse</th>\n",
-       "      <th>MonthlyIncome</th>\n",
-       "      <th>NumberOfDependents</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.249908</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8158.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3870.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.456127</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6666.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000190</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10500.0</td>\n",
-       "      <td>2.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>49</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.271820</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>400.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   SeriousDlqin2yrs  age  NumberOfTime30-59DaysPastDueNotWorse    DebtRatio  \\\n",
-       "0                 0   64                                     0     0.249908   \n",
-       "1                 0   58                                     0  3870.000000   \n",
-       "2                 0   41                                     0     0.456127   \n",
-       "3                 0   43                                     0     0.000190   \n",
-       "4                 1   49                                     0     0.271820   \n",
-       "\n",
-       "   NumberOfTimes90DaysLate  NumberOfTime60-89DaysPastDueNotWorse  \\\n",
-       "0                        0                                     0   \n",
-       "1                        0                                     0   \n",
-       "2                        0                                     0   \n",
-       "3                        0                                     0   \n",
-       "4                        0                                     0   \n",
-       "\n",
-       "   MonthlyIncome  NumberOfDependents  \n",
-       "0         8158.0                 0.0  \n",
-       "1            NaN                 0.0  \n",
-       "2         6666.0                 0.0  \n",
-       "3        10500.0                 2.0  \n",
-       "4          400.0                 0.0  "
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T09:15:48.291497Z",
@@ -244,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T10:07:22.068504Z",
@@ -258,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-06-14T10:06:59.582960Z",
@@ -272,100 +160,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-14T09:23:38.280850Z",
-     "start_time": "2019-06-14T09:23:38.275460Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.impute import SimpleImputer"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we have some missing values, we can fill them with predefined value"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-14T09:23:52.193346Z",
-     "start_time": "2019-06-14T09:23:52.190237Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "step_log_reg = ('log_reg', LogisticRegression(random_state=RANDOM_STATE, n_jobs=-1))\n",
-    "step_imputer = (\"imputer\", SimpleImputer(strategy=\"mean\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "So pipeline consists of two steps: first fill the missing values, second - train the logistic regrssion"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-14T09:24:02.740321Z",
-     "start_time": "2019-06-14T09:24:02.733792Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "\n",
-    "bl_estimator = Pipeline([\n",
-    "    step_imputer,\n",
-    "    step_log_reg\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-06-14T09:27:04.292215Z",
-     "start_time": "2019-06-14T09:27:04.147746Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n",
-      "/usr/local/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:1296: UserWarning: 'n_jobs' > 1 does not have any effect when 'solver' is set to 'liblinear'. Got 'n_jobs' = 8.\n",
-      "  \" = {}.\".format(effective_n_jobs(self.n_jobs)))\n"
-     ]
-    }
-   ],
-   "source": [
-    "bl_estimator.fit(X_train, y_train)\n",
-    "bl_y_pred = bl_estimator.predict_proba(X_test)[:,1]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Task 1: Build own classifier which can hit the baseline model."
+    "### Task 1: Build a baseline Logistic Regression model"
    ]
   },
   {
@@ -379,7 +177,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Task 2: Compare your own classifier with the baseline model - feel free to select any approach for evaluation you like."
+    "### Task 2: Build another model of your own choice. Try to beat the baseline model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Task 3: Compare your own model's performance with the baseline model performance."
    ]
   },
   {
@@ -406,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   },
   "toc": {
    "base_numbering": 1,
